--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "justice_org_root",
-  "private": true,
+  "name": "justice_org",
+  "version": "1.0.0",
+  "description": "Full stack project with backend and frontend",
+  "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix backend\" \"npm start --prefix frontend\""
+    "start": "concurrently \"npm run dev --prefix backend\" \"npm start --prefix frontend\"",
+    "install-all": "npm install --prefix backend && npm install --prefix frontend"
   },
-  "devDependencies": {
+  "dependencies": {
     "concurrently": "^9.0.0"
   }
 }
