--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,8 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "NODE_ENV=production node src/server.js",
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
@@ -13,7 +15,8 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^2.0.1",
-    "prisma": "^6.11.1"
+    "prisma": "^6.11.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
