--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
   "scripts": {
-    "start": "NODE_ENV=production node src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "build": "prisma generate && npm install --prefix ../frontend && npm run build --prefix ../frontend",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
@@ -15,10 +15,12 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^2.0.1",
-    "prisma": "^6.11.1",
-    "path": "^0.12.7"
+    "prisma": "^6.11.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
