--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,7 @@
-# render.yaml
 services:
   # PostgreSQL Database
-  - type: pserv
+  - type: postgres
     name: justice-org-db
-    env: postgres
     plan: free
 
   # Node.js Backend Web Service
@@ -12,13 +10,12 @@ services:
     env: node
     plan: free
     rootDir: backend
-    buildCommand: "npm install && prisma migrate deploy && npm run build"
+    buildCommand: "npm install && npx prisma migrate deploy && npm run build"
     startCommand: "npm start"
     healthCheckPath: /api/health
     envVars:
       - key: DATABASE_URL
-        fromService:
-          type: pserv
+        fromDatabase:
           name: justice-org-db
           property: connectionString
       - key: NODE_ENV
