--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     plan: free
     rootDir: backend
-    buildCommand: "npm install && npx prisma migrate deploy && npm run build"
+    buildCommand: "npm install --legacy-peer-deps && npx prisma migrate deploy && npm run build"
     startCommand: "npm start"
     healthCheckPath: /api/health
     envVars:
@@ -17,4 +17,4 @@ services:
         value: your-super-secret-jwt-key-change-this-in-production
       - key: PORT
         value: 5000
-  
+
