Configure project for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     plan: free
     rootDir: backend
-    buildCommand: "npm install && prisma migrate deploy && npm install --prefix ../frontend --legacy-peer-deps && npm run build --prefix ../frontend"
+    buildCommand: "npm install && npx prisma migrate deploy && npm install --prefix ../frontend --legacy-peer-deps && npm run build --prefix ../frontend"
     startCommand: "npm start"
     healthCheckPath: /api/health
     envVars:
