Configure project for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -6,8 +6,6 @@ services:
     buildCommand: |
       npm install
       npx prisma migrate deploy
-      npm install --prefix ../frontend --legacy-peer-deps
-      npm run build --prefix ../frontend
     startCommand: npm start
     envVars:
       - key: DATABASE_URL
@@ -20,3 +18,11 @@ services:
     autoDeploy: true
     envSpecificConfigs:
       nodeVersion: 20.x
+
+  - type: static
+    name: justice-org-frontend
+    rootDir: frontend
+    buildCommand: |
+      npm install --legacy-peer-deps
+      npm run build
+    staticPublishPath: build
