--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,20 @@
 services:
+  # Node.js Backend Web Service
   - type: web
-    name: justice-org
+    name: justice-org-backend
     env: node
     plan: free
     rootDir: backend
-    buildCommand: |
-      npm install
-      npx prisma migrate deploy
-      npm install --prefix ../frontend --legacy-peer-deps
-      npm run build --prefix ../frontend
-    startCommand: npm start
+    buildCommand: "npm install && npx prisma migrate deploy && npm install --prefix ../frontend --legacy-peer-deps && npm run build --prefix ../frontend"
+    startCommand: "npm start"
+    healthCheckPath: /api/health
     envVars:
       - key: DATABASE_URL
-        sync: false
+        value: postgresql://justice_org_user:aaLkyZabyVTIIlrZji35r3d45th5kike@dpg-d2bqmu7diees73f1l3s0-a.frankfurt-postgres.render.com:5432/justice_org
+      - key: NODE_ENV
+        value: production
       - key: JWT_SECRET
-        sync: false
+        value: your-super-secret-jwt-key-change-this-in-production
       - key: PORT
         value: 5000
-    autoDeploy: true
-    envSpecificConfigs:
-      nodeVersion: 20.x
+
