--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^6.2.1",
+    "ajv": "^6.12.6",
     "antd": "^5.26.3",
     "axios": "^1.10.0",
     "draftjs-to-html": "^0.9.1",
