--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "build": "prisma generate && npm install --prefix ../frontend && npm run build --prefix ../frontend",
+    "build": "prisma generate && npm install --prefix ../frontend --legacy-peer-deps && npm run build --prefix ../frontend",
     "postinstall": "prisma generate"
   },
   "dependencies": {
