--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^6.2.1",
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2",
     "antd": "^5.26.3",
     "axios": "^1.10.0",
     "draftjs-to-html": "^0.9.1",
@@ -28,9 +30,6 @@
     "react-scripts": "^5.0.1",
     "recharts": "^3.1.0",
     "web-vitals": "^2.1.4"
-  },
-  "overrides": {
-    "ajv": "^6.12.6"
   },
   "scripts": {
     "start": "react-scripts start",
