--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,38 @@
 services:
-  # Node.js Backend Web Service
+  # Backend API
   - type: web
     name: justice-org-backend
     env: node
     plan: free
+    region: frankfurt
     rootDir: backend
-    buildCommand: "npm install && npx prisma migrate deploy && npm install --prefix ../frontend --legacy-peer-deps && npm run build --prefix ../frontend"
-    startCommand: "npm start"
-    healthCheckPath: /api/health
+    buildCommand: |
+      npm install
+      npx prisma generate
+      npx prisma migrate deploy
+    startCommand: npm start
     envVars:
       - key: DATABASE_URL
-        value: postgresql://justice_org_user:aaLkyZabyVTIIlrZji35r3d45th5kike@dpg-d2bqmu7diees73f1l3s0-a.frankfurt-postgres.render.com:5432/justice_org
-      - key: NODE_ENV
-        value: production
-      - key: JWT_SECRET
-        value: your-super-secret-jwt-key-change-this-in-production
-      - key: PORT
-        value: 5000
+        fromDatabase:
+          name: justice-org-db
+          property: connectionString
 
+  # Frontend React App
+  - type: static_site
+    name: justice-org-frontend
+    plan: free
+    region: frankfurt
+    rootDir: frontend
+    buildCommand: |
+      npm install --legacy-peer-deps
+      npm install @fortawesome/fontawesome-free
+      npm run build
+    staticPublishPath: build
+    envVars:
+      - key: REACT_APP_API_URL
+        value: https://justice-org-backend.onrender.com
+
+databases:
+  - name: justice-org-db
+    plan: free
+    region: frankfurt
