--- a/render.yaml
+++ b/render.yaml
@@ -1,39 +1,31 @@
 services:
-  # Backend API
   - type: web
     name: justice-org-backend
     env: node
     plan: free
-    region: frankfurt
-    rootDir: backend
     buildCommand: |
       npm install
-      npx prisma generate
       npx prisma migrate deploy
+      npm install --prefix ../frontend --legacy-peer-deps
+      npm run build --prefix ../frontend
     startCommand: npm start
     envVars:
       - key: DATABASE_URL
-        fromDatabase:
-          name: justice-org-db
-          property: connectionString
+        sync: false
+      - key: JWT_SECRET
+        sync: false
+      - key: PORT
+        value: 5000
+    rootDir: backend
+    autoDeploy: true
+    envSpecificConfigs:
+      nodeVersion: 20.x
 
-  # Frontend React App (serve static build via Node.js)
   - type: web
     name: justice-org-frontend
-    env: node
+    env: static
     plan: free
-    region: frankfurt
+    buildCommand: npm install --legacy-peer-deps && npm run build
+    staticPublishPath: build
     rootDir: frontend
-    buildCommand: |
-      npm install --legacy-peer-deps
-      npm install @fortawesome/fontawesome-free
-      npm run build
-    startCommand: npx serve -s build
-    envVars:
-      - key: REACT_APP_API_URL
-        value: https://justice-org-backend.onrender.com
-
-databases:
-  - name: justice-org-db
-    plan: free
-    region: frankfurt
+    autoDeploy: true
