--- a/render.yaml
+++ b/render.yaml
@@ -6,8 +6,8 @@ services:
     buildCommand: |
       npm install
       npx prisma migrate deploy
-      npm install --prefix ../frontend --legacy-peer-deps
-      npm run build --prefix ../frontend
+      npm install --prefix ./frontend --legacy-peer-deps
+      npm run build --prefix ./frontend
     startCommand: npm start
     envVars:
       - key: DATABASE_URL
@@ -18,8 +18,7 @@ services:
         value: 5000
     rootDir: backend
     autoDeploy: true
-    envSpecificConfigs:
-      nodeVersion: 20.x
+    nodeVersion: 20.x
 
   - type: web
     name: justice-org-frontend
