--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,16 @@
 services:
-  # Node.js Backend Web Service
   - type: web
-    name: justice-org-backend
+    name: justice-org
     env: node
     plan: free
-    rootDir: backend
-    buildCommand: "npm install && npx prisma migrate deploy && npm install --prefix ../frontend --legacy-peer-deps && npm run build --prefix ../frontend"
-    startCommand: "npm start"
-    healthCheckPath: /api/health
+    buildCommand: |
+      npm install
+      npm run build
+    startCommand: npm start
     envVars:
       - key: DATABASE_URL
-        value: postgresql://justice_org_user:aaLkyZabyVTIIlrZji35r3d45th5kike@dpg-d2bqmu7diees73f1l3s0-a.frankfurt-postgres.render.com:5432/justice_org
-      - key: NODE_ENV
-        value: production
+        sync: false
       - key: JWT_SECRET
-        value: your-super-secret-jwt-key-change-this-in-production
+        sync: false
       - key: PORT
         value: 5000
-
