--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "install-backend": "npm install --prefix backend",
-    "install-frontend": "npm install --prefix frontend",
+    "install-frontend": "npm install --prefix frontend --legacy-peer-deps",
     "install": "npm run install-backend && npm run install-frontend",
     "start-backend": "npm start --prefix backend",
     "start-frontend": "npm start --prefix frontend",
