--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^2.0.1",
+    "node-fetch": "^3.3.2",
     "prisma": "^6.11.1"
   },
   "devDependencies": {
