--- a/render.yaml
+++ b/render.yaml
@@ -14,3 +14,7 @@ services:
         sync: false
       - key: PORT
         value: 5000
+      - key: NODE_ENV
+        value: production
+      - key: HOST
+        value: 0.0.0.0
