--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
       cd backend && npm install --no-cache --production=false
       cd frontend && npm install --no-cache --legacy-peer-deps --production=false
       cd frontend && npm run build
-    startCommand: cd backend && npm start
+    startCommand: npm start
     envVars:
       - key: DATABASE_URL
         sync: false
