Fix npm cache issues and port binding for Render2025814

--- a/render.yaml
+++ b/render.yaml
@@ -17,3 +17,5 @@ services:
         value: production
       - key: HOST
         value: 0.0.0.0
+      - key: REACT_APP_API_URL
+        value: https://justice-org.onrender.com
