--- a/render.yaml
+++ b/render.yaml
@@ -18,4 +18,4 @@ services:
       - key: HOST
         value: 0.0.0.0
       - key: REACT_APP_API_URL
-        value: https://justice-org-1.onrender.com
+        value: https://justice-org.onrender.com
