--- a/.github/workflows/mohammed.yml
+++ b/.github/workflows/mohammed.yml
@@ -17,7 +17,10 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
+
+      - name: Disable CI strict mode (avoid warnings as errors)
+        run: echo "CI=false" >> $GITHUB_ENV
 
       - name: Build frontend
         working-directory: backend/frontend
