--- a/.github/workflows/mohammed.yml
+++ b/.github/workflows/mohammed.yml
@@ -46,6 +46,18 @@ jobs:
           tar czf $TAR backend/
           echo "TAR=$TAR" >> $GITHUB_ENV
 
+      # خطوة اختبار الاتصال
+      - name: Test SSH Connection
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          script: |
+            echo "SSH test: successful connection to ${{ secrets.SERVER_HOST }}"
+            whoami
+
       - name: Copy tar to server (SCP)
         uses: appleboy/scp-action@master
         with:
