--- a/.github/workflows/mohammed.yml
+++ b/.github/workflows/mohammed.yml
@@ -1,43 +1,83 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Build & Deploy
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+env:
+  DOMAIN: justice-yemen.org   # غيّر لدومينك
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          node-version: '20'
+
+      - name: Disable CI strict mode (avoid warnings as errors)
+        run: echo "CI=false" >> $GITHUB_ENV
+
+      - name: Build frontend
+        working-directory: backend/frontend
+        env:
+          REACT_APP_API_URL: "https://${{ env.DOMAIN }}"
+        run: |
+          npm ci --legacy-peer-deps
+          npm run build
+
+      - name: Copy built frontend into backend/public
+        run: |
+          rm -rf backend/public || true
+          mkdir -p backend/public
+          cp -r backend/frontend/build/* backend/public/
+
+      - name: Install backend deps
+        working-directory: backend
+        run: npm ci --legacy-peer-deps
+
+      - name: Pack release tarball
+        run: |
+          TAR=release-${{ github.sha }}.tar.gz
+          tar czf $TAR backend/
+          echo "TAR=$TAR" >> $GITHUB_ENV
+
+      # خطوة اختبار الاتصال
+      - name: Test SSH Connection
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          script: |
+            echo "SSH test: successful connection to ${{ secrets.SERVER_HOST }}"
+            whoami
+
+      - name: Copy tar to server (SCP)
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          source: ${{ env.TAR }}
+          target: /tmp/
+
+      - name: Run mohammed script on server (SSH)
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          script: |
+            if [ ! -f /home/mohammed/mohammed.sh ]; then
+              echo "ERROR: mohammed.sh not found. Please upload /home/mohammed/mohammed.sh first."
+              exit 2
+            fi
+            bash /home/mohammed/mohammed.sh /tmp/${{ env.TAR }}
